--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -51,6 +51,10 @@ li:last-child {
   text-align: center;
   color: white;
   padding: 10px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
 }
 
 .header {
