--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -46,7 +46,7 @@ li:last-child {
   border-right: none;
 }
 
-.footer {
+#footer {
   background-color: #000000;
   text-align: center;
   color: white;
